--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,13 @@
 <div id="top" class="navigation">
     <div class="navigation__wrapper wrapper--large">
-        <a class="navigation__logo logo" routerLink="/">JM</a>
+       <a routerLink="/"><img src="../../assets/img/img1.jpg" alt="" style="width: 100px; height: 100px; margin:40px"></a>
+
         <nav class="navigation__container">
             <ul class="navigation__list">
                 <li><a routerLink="/">Home</a></li>
-                <li><a href="#work">About</a></li>
+                <li><a routerLink="/about">About</a></li>
                 <li><a href="#blog">Ressources</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a routerLink="/contact">Contact</a></li>
             </ul>
         </nav>
         <a class="navigation__cta button" routerLink="/signin">Login</a>
