--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 <!-- SECTION: Intro -->
 <header class="header">
     <div class="introduction">
+        <img src="../../assets/img/about.avif" alt="" style="width: 300px; height: 300px; margin:40px" >
         <h1 class="introduction__content">
+            
             <span class="introduction__content-el introduction__content-el--name">Take Online Test</span>
             <span class="introduction__content-el introduction__content-el--description">Limitless</span>
             <span class="introduction__content-el introduction__content-el--job">Now</span>
