--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,23 +1,36 @@
-<header class="header">
-  <div class="introduction">
-    <div class="box">
-      <div class="box__header">
-        <h1>Sign In</h1>
-      </div>
-      <div class="box__body">
-        <form class="contact__form">
-          <input class="contact__form-el contact__form-el--name" type="text" placeholder="Your First Name"
-            spellcheck="false">
-          <input class="contact__form-el contact__form-el--name" type="text" placeholder="Your Last Name"
-            spellcheck="false">
-          <input class="contact__form-el contact__form-el--email" type="email" placeholder="Your Email"
-            spellcheck="false">
-          <input class="contact__form-el contact__form-el--email" type="password" placeholder="Your Password"
-            spellcheck="false">
-          <textarea class="contact__form-el contact__form-el--message" placeholder="Your Message"></textarea>
-          <input class="contact__form-el contact__form-el--submit" type="submit" value="Submit">
-        </form>
+<div class="half">
+  <div class="contents order-2 order-md-1">
+    <div class="container">
+      <div class="row align-items-center justify-content-center">
+        <div class="col-md-6">
+          <div class="form-block">
+            <div class="mb-5">
+              <h3 class="text-center">Let's Sign you in</h3>
+              <p class="text-center mb-4" >Welcome Back, You have been missed</p>
+              <form action="#" method="post">
+                <div class="form-group first">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" placeholder="your-email@gmail.com" id="email">
+                </div>
+                <div class="form-group last mb-3">
+                  <label for="password">Password</label>
+                  <input type="password" class="form-control" placeholder="Your Password" id="password">
+                </div>
+                <div class="d-sm-flex mb-5 align-items-center">
+                  <label class="control control--checkbox mb-3 mb-sm-0"><span class="caption">Remember me</span>
+                    <input type="checkbox" checked="checked" />
+                    <div class="control__indicator"></div>
+                  </label>
+                  <span class="ml-auto"><a href="#" class="forgot-pass">Forgot Password</a></span>
+                </div>
+                <input style="width: 100%;height: 50px;" type="submit" value="Log In">
+              </form>
+            </div>       
+            <p style="font-weight: normal;">Don't have an account? <a routerLink="/signup" style="color: black;font-weight: bold;">Register Now</a></p>
+          </div>
+        </div>
       </div>
     </div>
+
+
   </div>
-</header>
