--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,41 @@
-<p>signup works!</p>
+<div class="half">
+  <div class="contents order-2 order-md-1">
+    <div class="container">
+      <div class="row align-items-center justify-content-center">
+        <div class="col-md-6">
+          <div class="form-block">
+            <div class="mb-5">
+              <h3 class="text-center">Let's Register Account</h3>
+              <p class="text-center mb-4">Hello user,You have a greatful journey</p>
+              <form action="#" method="post">
+                <div class="form-group first">
+                  <label for="username">Full Name</label>
+                  <input type="text" class="form-control" placeholder="your-email@gmail.com" id="username">
+                </div>
+                <div class="form-group last mb-3">
+                  <label for="job">Job</label>
+                  <input type="text" class="form-control" placeholder="Your Job" id="job">
+                </div>
+                <div class="form-group last mb-3">
+                  <label for="phone">Phone</label>
+                  <input type="tel" class="form-control" placeholder="Your Phone Number" id="phone">
+                </div>
+                <div class="form-group last mb-3">
+                  <label for="email">Professional Email</label>
+                  <input type="email" class="form-control" placeholder="Your Email" id="email">
+                </div>
+                <div class="form-group last mb-3">
+                  <label for="password">Password</label>
+                  <input type="password" class="form-control" placeholder="Your Password" id="password">
+                </div>
+                <input style="width: 100%;height: 50px;" type="submit" value="Sign Up">
+              </form>
+            </div>       
+            <p style="font-weight: normal;">Already have an account? <a routerLink="/signup" style="color: black;font-weight: bold;">Login</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
